--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/aws-sdk": "^0.0.42",
     "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
+    "@types/http-status": "^0.2.30",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.32",
     "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.15",
+    "@types/nodemailer": "^6.4.17",
     "@types/streamifier": "^0.1.2",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.22.0",
@@ -33,7 +37,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.800.0",
     "@prisma/client": "^5.22.0",
-    "@types/jsonwebtoken": "^9.0.6",
     "aws": "^0.0.3-2",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
