--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "http-status": "^1.8.1",
