notification api add

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "firebase-admin": "^13.4.0",
     "haversine-distance": "^1.2.3",
     "http-status": "^1.8.1",
     "jsonwebtoken": "^9.0.2",
